# alia-legal-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  service.yml
engine/: fine-tuned-gemma4-unsloth.ipynb
engine/deployment/law-model/: Dockerfile  cloudbuild.yaml
engine/deployment/speech/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
engine/export_and_fusion/: main.py
engine/law-model/: fine-tuned-gemma4-unsloth.ipynb
pipeline/: orchestrator.py
services/: legal_llm.py  stt.py  translation.py  tts.py
ui/: audio.py  chat.py  styles.py
utils/: audio.py  config.py
